sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:9: error: reassignment to val
				i = 0	 
                                  ^